src/test/deca/context/invalid/TypeNotDeclared.deca



{
	float b;

	int a = (Class) (b);
	
}
